--- a/package.json
+++ b/package.json
@@ -15,28 +15,23 @@
     "p-queue": "^6.1.1",
     "pino": "^5.13.2",
     "pino-pretty": "^3.2.1",
-    "prettier": "^1.18.2",
     "quick-lru": "^4.0.1"
   },
   "description": "Updated fork of JikanTS, A wrapper for the jikan REST API.",
   "devDependencies": {
-    "@types/got": "^9.6.7",
+    "@types/got": "^9.6.11",
+    "@types/p-memoize": "^1.0.1",
     "@types/pino": "^5.8.10",
-    "husky": "^3.0.5",
+    "prettier": "^2.2.1",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "typedoc": "^0.15.0",
-    "typescript": "^3.6.3"
+    "typescript": "^4.2.2"
   },
   "files": [
     "dist/**/*"
   ],
   "homepage": "https://github.com/Julien-Broyard/jikants#readme",
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn pre-commit"
-    }
-  },
   "keywords": [
     "api-wrapper",
     "api",
