--- a/package.json
+++ b/package.json
@@ -1,59 +1,59 @@
 {
-  "author": {
-    "email": "broyard.dev@gmail.com",
-    "name": "Julien Broyard",
-    "url": "https://github.com/Julien-Broyard"
-  },
-  "bugs": {
-    "email": "broyard.dev@gmail.com",
-    "url": "https://github.com/Julien-Broyard/jikants/issues"
-  },
-  "dependencies": {
-    "got": "^9.6.0",
-    "ow": "^0.13.2",
-    "p-memoize": "^3.1.0",
-    "p-queue": "^6.1.1",
-    "pino": "^5.13.2",
-    "pino-pretty": "^3.2.1",
-    "quick-lru": "^4.0.1"
-  },
-  "description": "Updated fork of JikanTS, A wrapper for the jikan REST API.",
-  "devDependencies": {
-    "@types/got": "^9.6.11",
-    "@types/p-memoize": "^1.0.1",
-    "@types/pino": "^5.8.10",
-    "prettier": "^2.2.1",
-    "tslint": "^5.20.0",
-    "tslint-config-prettier": "^1.18.0",
-    "typedoc": "^0.15.0",
-    "typescript": "^4.2.2"
-  },
-  "files": [
-    "dist/**/*"
-  ],
-  "homepage": "https://github.com/Julien-Broyard/jikants#readme",
-  "keywords": [
-    "api-wrapper",
-    "api",
-    "jikan",
-    "typescript",
-    "wrapper"
-  ],
-  "license": "MPL-2.0",
-  "main": "dist/src/index.js",
-  "name": "@piigo/jikants",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/JulienLavocat/jikants"
-  },
-  "scripts": {
-    "build": "tsc",
-    "docs": "typedoc --out docs ./src --mode file",
-    "lint": "yarn tslint && yarn prettier",
-    "pre-commit": "yarn lint",
-    "prettier": "prettier --write \"{,!(node_modules|dist|build|coverage)/**/}*.{js,jsx,ts,tsx,json}\"",
-    "tslint": "tslint --project tsconfig.json --fix"
-  },
-  "types": "dist/src/index.d.ts",
-  "version": "1.3.0"
+	"author": {
+		"email": "broyard.dev@gmail.com",
+		"name": "Julien Broyard",
+		"url": "https://github.com/Julien-Broyard"
+	},
+	"bugs": {
+		"email": "broyard.dev@gmail.com",
+		"url": "https://github.com/Julien-Broyard/jikants/issues"
+	},
+	"dependencies": {
+		"got": "^9.6.0",
+		"ow": "^0.13.2",
+		"p-memoize": "^3.1.0",
+		"p-queue": "^6.1.1",
+		"pino": "^5.13.2",
+		"pino-pretty": "^3.2.1",
+		"quick-lru": "^4.0.1"
+	},
+	"description": "Updated fork of JikanTS, A wrapper for the jikan REST API.",
+	"devDependencies": {
+		"@types/got": "^9.6.11",
+		"@types/p-memoize": "^1.0.1",
+		"@types/pino": "^5.8.10",
+		"prettier": "^2.2.1",
+		"tslint": "^5.20.0",
+		"tslint-config-prettier": "^1.18.0",
+		"typedoc": "^0.15.0",
+		"typescript": "^4.2.2"
+	},
+	"files": [
+		"dist/**/*"
+	],
+	"homepage": "https://github.com/Julien-Broyard/jikants#readme",
+	"keywords": [
+		"api-wrapper",
+		"api",
+		"jikan",
+		"typescript",
+		"wrapper"
+	],
+	"license": "MPL-2.0",
+	"main": "dist/src/index.js",
+	"name": "@piigo/jikants",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/JulienLavocat/jikants"
+	},
+	"scripts": {
+		"build": "tsc",
+		"docs": "typedoc --out docs ./src --mode file",
+		"lint": "yarn tslint && yarn prettier",
+		"pre-commit": "yarn lint",
+		"format": "prettier --write \"{,!(node_modules|dist|build|coverage)/**/}*.{js,jsx,ts,tsx,json}\"",
+		"tslint": "tslint --project tsconfig.json --fix"
+	},
+	"types": "dist/src/index.d.ts",
+	"version": "1.3.0"
 }
